# routes/api.php
@@ -5,6 +5,7 @@ use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\Api\V1\{
     Auth\SignupRequest,
     Auth\SignupConfirm,
+    Auth\Login,
 
     Board\CreateBoard,
 
@@ -16,6 +17,7 @@ Route::prefix('v1')->group(function () {
 
     Route::post('/auth/signup', SignupRequest::class);
     Route::get('/auth/signup/confirm/{id}/{hash}', SignupConfirm::class)->name('verification.verify');
+    Route::post('/auth/login', Login::class);
 
     Route::post('/board', CreateBoard::class);
 
